<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tab_white"
    android:padding="@dimen/view_margin"
    tools:context="com.scorg.forms.fragments.FeedbackFragment">

    <com.scorg.forms.customui.CustomTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_margin"
        android:padding="@dimen/dp12"
        android:textAllCaps="true"
        android:textColor="@color/title_background"
        android:textSize="18sp"
        app:customFont="@string/roboto_medium"
        tools:text="@string/feedback" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submitButton"
        android:layout_below="@+id/titleTextView"
        android:scrollbars="none"
        tools:context="com.scorg.forms.fragments.FeedbackFragment">

        <LinearLayout
            android:id="@+id/fieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <com.scorg.forms.customui.CustomButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/submit"
        android:background="@drawable/button_register"
        android:textColor="@drawable/tab_white"
        android:layout_marginBottom="@dimen/view_margin"
        android:layout_alignParentRight="true" />

</RelativeLayout>
